delete atribut aos and fix custom scrollbar

--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -26,7 +26,7 @@
     align-items: center;
     justify-self: center;
     width: 100%;
-    padding: 30px;
+    padding: 30px 0px;
     padding-top: 130px;
     .left-content {
       display: flex;
